# Study-planner

./: .gitignore  README.md  REQUIREMENTS_COMPLIANCE.md
backend/: .env.example  config.py  main.py  pyproject.toml  qa_corpus.csv  test_fastapi.py
backend/api/: schemas.py
backend/api/routes/: chat.py  documents.py  health.py  quiz.py
backend/rag/: db.py  embedder.py  in_memory_db.py  retriever.py
backend/scripts/: build_mindbridge_dataset.py  compute_evaluation_metrics.py  embed_corpus.py  ingest.py  ingest_new.py  prepare_human_evaluation.py  run_benchmark.py  validate_mindbridge_dataset.py
backend/services/: document_service.py  orchestrator.py  pdf_extractor.py  quiz_service.py  research_corpus.py
frontend/: .gitignore  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/documents/: page.tsx
frontend/app/quiz/: page.tsx
frontend/app/stress/: page.tsx
frontend/app/study-plan/: page.tsx
frontend/src/components/: AppShell.tsx  ChatView.tsx
mindbridge_rag_templates/: 1_sources.csv  2_corpus_chunks.csv  3_benchmark_questions.csv  4_ideal_answers.csv  5_risk_labels.csv  6_model_responses.csv  7_human_evaluation.csv  README.md  group_report.md  presentation_outline.md
