[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "mistralai>=1.0.0",
    "numpy>=2.4.6",
    "pydantic-settings>=2.14.1",
    "pymupdf>=1.27.2.3",
    "python-docx>=1.1.2",
    "python-multipart>=0.0.30",
    "sentence-transformers>=5.5.1",
    "sse-starlette>=3.4.4",
    "torch>=2.12.0",
    "uvicorn>=0.48.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
